duniverse/lwt/test/ppx_expect/cases/match_3.expect
File "match_3.ml", line 6, characters 4-5:
Error: This expression has type int but an expression was expected of type
         'a Lwt.t
