duniverse/lwt/test/ppx_expect/cases/match_3.ml
let _ =
  match%lwt
    Lwt.return ()
  with
  | () ->
    5;;
